Fix navbar-toggler alignment for responsiveness

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,6 +56,19 @@ header h1 {
     color: #d9ba85;
 }
 
+@media (max-width: 1024px) { 
+  .navbar {
+    padding-left: 15px;
+    margin-left: 15px; 
+  }
+}
+
+@media (max-width: 320px) { 
+  .navbar {
+    padding-left: 5px;
+    margin-left: 5px; 
+  }
+}
 
 /*--------------------------------------------------------------
 # Footer
